2019/05-kubernetes-dashboard-gitlab/manifests/kube-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/sign_in
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: external-auth-oauth2
  namespace: kube-system
spec:
  rules:
  - host: ##DASHBORD_URL##
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /

  tls:
  - hosts:
      - ##DASHBORD_URL##
    secretName: kubernetes-dashboard-tls

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: oauth2-proxy
  namespace: kube-system
spec:
  rules:
  - host: ##DASHBORD_URL##
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
      - ##DASHBORD_URL##
    secretName: kubernetes-dashboard-tls
